fixed position of add contact button so it doesnt overlap contacts

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,7 +158,7 @@ $custom-theme-colors: (
 #myInput {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    right: 12px;
 }
 
 .pageButtons {
